--- a/web/template/index.html
+++ b/web/template/index.html
@@ -35,7 +35,7 @@
         $(document).ready(function() {
             $.ajax({
                 type: 'GET',
-                url: "http://api/get_persons",
+                url: "/get_persons",
                 contentType: "application/json",
                 headers: {
                     'Access-Control-Allow-Credentials' : true,
