--- a/web/template/admin.html
+++ b/web/template/admin.html
@@ -67,7 +67,7 @@
                     headers: {
                         'Access-Control-Allow-Credentials' : true,
                         'Access-Control-Allow-Origin':'*',
-                        'Access-Control-Allow-Methods':'GET',
+                        'Access-Control-Allow-Methods':'DELETE',
                         'Access-Control-Allow-Headers':'application/json',
                     },
                     beforeSend: function(){
